# B3_softwareTraining_0

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
deploy/docker/nginx/: nginx.conf
deploy/kubernetes/: configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml  secrets.yaml.example
deploy/kubernetes/api-gateway/: deployment.yaml  service.yaml
deploy/kubernetes/image-recognition/: deployment.yaml  hpa.yaml  pvc.yaml  service.yaml  servicemonitor.yaml
deploy/kubernetes/knowledge-graph/: deployment.yaml  service.yaml
deploy/kubernetes/log-statistics/: deployment.yaml  service.yaml
deploy/kubernetes/model-management/: deployment.yaml  service.yaml
deploy/kubernetes/neo4j/: deployment.yaml  service.yaml  statefulset.yaml
deploy/kubernetes/postgresql/: deployment.yaml  service.yaml  statefulset.yaml
deploy/kubernetes/reasoning-engine/: deployment.yaml  service.yaml
deploy/scripts/: init_neo4j.sh  init_postgres.sh
kg-construction/seed_data/: climate_conditions.csv  growth_cycles.csv  pest_climate_relations.csv  pest_growth_cycle_relations.csv  pest_pesticide_relations.csv  pest_prevention_relations.csv  pest_symptom_relations.csv  pesticides.csv  pests_diseases.csv  prevention_methods.csv  symptoms.csv
libs/common-py/: setup.py
libs/common-py/common/: __init__.py  auth.py  errors.py  logging.py  metrics.py
libs/common-py/common/db/: __init__.py  postgres.py  redis.py
libs/proto/: common.proto  kg.proto  log_statistics.proto  model_mgmt.proto  reasoning.proto  recognition.proto
ml-models/classification/: config.yaml  train.py
ml-models/classification/eval/: __init__.py  evaluate.py
ml-models/classification/losses/: __init__.py  distillation_loss.py  focal_loss.py
ml-models/classification/models/: __init__.py  jujube_classifier.py
services/api-gateway/: Dockerfile  go.mod
services/api-gateway/cmd/server/: main.go
services/api-gateway/internal/auth/: jwt.go
services/api-gateway/internal/config/: config.go
services/api-gateway/internal/handler/: handler.go
services/api-gateway/internal/middleware/: middleware.go
services/api-gateway/internal/proxy/: proxy.go
services/image-recognition/: Dockerfile  README.md  requirements.txt
services/image-recognition/src/: __init__.py  config.py  main.py
services/image-recognition/src/inference/: __init__.py  engine.py  postprocess.py
services/image-recognition/src/models/: __init__.py  model_loader.py
services/image-recognition/src/preprocessing/: __init__.py  transforms.py
services/knowledge-graph/: Dockerfile  requirements.txt
services/knowledge-graph/src/: config.py  main.py
services/knowledge-graph/src/api/: __init__.py  routes.py  schemas.py
services/knowledge-graph/src/neo4j/: __init__.py  driver.py
services/knowledge-graph/src/recommendation/: __init__.py  engine.py
services/knowledge-graph/src/risk/: __init__.py  predictor.py
services/knowledge-graph/src/search/: __init__.py  semantic_search.py
services/log-statistics/cmd/server/: main.go
services/log-statistics/internal/grpc/: server.go
services/log-statistics/internal/handler/: log_handler.go  stats_handler.go
services/log-statistics/internal/model/: recognition_log.go
services/model-management/: Dockerfile  requirements.txt
services/model-management/src/: config.py  main.py
services/model-management/src/api/: routes.py
services/reasoning-engine/: Dockerfile  requirements.txt
services/reasoning-engine/src/: config.py  main.py
tests/: conftest.py
tests/integration/: __init__.py  test_api_contracts.py  test_config.py  test_inference_engine.py  test_kg_service.py  test_model_loader.py  test_postprocess.py  test_preprocessing.py  test_reasoning_engine.py
txt/: 横向项目研究或开发-end.docx  横向项目研究或开发-任务书.docx  横向项目研究或开发-任务书.txt  横向项目研究或开发-任务书.原始备份.docx  横向项目研究或开发-任务书.校验提取.txt  需求规格说明书-子系统一病虫害识别和知识图谱模型基础软件-修改.docx  需求规格说明书-子系统一病虫害识别和知识图谱模型基础软件-修改.txt
(+14 files in other folders)
