# =============================================================================
# Jujube Platform — Python Workspace Configuration
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = [
    "services",
    "services/image-recognition/src",
    "services/knowledge-graph/src",
    "services/reasoning-engine/src",
    "services/model-management/src",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--maxfail=3",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires running services)",
    "slow: Slow-running tests",
    "gpu: Tests requiring GPU",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
exclude = [
    "build/",
    "dist/",
    "venv/",
    ".venv/",
    "__pycache__/",
    "proto/",
    "pkg/pb/",
]

[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "google.protobuf.*",
    "neo4j.*",
    "redis.*",
    "onnx.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | proto
  | pkg/pb
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["services", "pkg"]
known_third_party = ["grpc", "google", "neo4j", "redis", "torch", "numpy", "PIL"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 100
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "proto",
    "pkg/pb",
]
ignore = [
    "E203",   # whitespace before ':'
    "E501",   # line too long (handled by black)
    "W503",   # line break before binary operator
]
per-file-ignores = [
    "__init__.py:F401",   # unused imports in init files
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["proto/", "pkg/pb/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.coverage.run]
source = ["services"]
concurrency = ["thread", "multiprocessing"]
parallel = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/pkg/pb/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103", "C0114", "C0115", "C0116",
    "R0903", "R0913",
]

# =============================================================================
# Build System
# =============================================================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jujube-platform"
version = "0.1.0"
description = "Jujube Platform — multi-service AI platform"
requires-python = ">=3.11"
license = { text = "Proprietary" }
